client/src/Styles/Friends.css
:root {
  --Friends_Main_Font: "Inter", sans-serif;
  --Friends_Sub_Font: "Varela Round", sans-serif;
  --Friends_User_Icon_Size: 30px;
  --Friends_Chat_Name: 18px;
  --Friends_Last_Message: 16px;
  --Friends_Last_Message_Time: 14px;
  --Friends_Welcome_Title: 24px;
  --Friends_Welcome_Greeting: 16px;
}

.Friends_Page {
  background-color: black;
  color: rgb(229, 229, 229);
  height: 100%;
  width: 100%;
  display: flex;
  gap: 0.5em;
  padding: 0.5em;
}

.Friends_List_Container {
  height: 100%;
  width: 25%;
  min-width: 400px;
}

.Friends_List {
  background-color: rgb(20, 33, 61);
  font-family: var(--Friends_Main_Font);
  overflow-y: scroll;
  height: 100%;
  width: 100%;
  padding: 0.5em;
}

.Friends_List::-webkit-scrollbar {
  width: 3px;
}

.Friends_List::-webkit-scrollbar-track {
  background: rgb(20, 33, 61);
  border-radius: 3px;
}

.Friends_List::-webkit-scrollbar-thumb {
  background: rgb(20, 33, 61);
  border-radius: 3px;
}

.Friends_List:hover::-webkit-scrollbar-thumb {
  background: rgb(100, 99, 99);
}

.Friends_List--Search {
  width: 100%;
}

.Friends_List--Search input {
  background-color: rgb(25, 25, 25);
  color: white;
  display: block;
  width: 100%;
  padding: 0.6em;
  padding-top: 0.8em;
  border-style: none;
  border-radius: 5px;
  outline: none;
}

.Friends_List--Friend_Card {
  background-color: rgb(15, 15, 15);
  display: flex;
  height: 70px;
  width: 100%;
  align-items: center;
  gap: 0.5em;
  padding: 0.5em;
  border-radius: 5px;
  margin: 1em 0em;
  cursor: pointer;
  &:hover {
    background-color: rgb(20, 20, 20);
  }
}

.Friend_Card--Image {
  display: flex;
  width: 15%;
  justify-content: center;
  align-items: center;
}

.Friend_Card--Image_Icon_Container {
  background-color: rgb(20, 33, 61);
  display: flex;
  height: 45px;
  width: 45px;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
}

.Friend_Card--Image_Icon {
  font-size: var(--Friends_User_Icon_Size);
  color: white;
}

.Friend_Card--Details {
  width: 85%;
}

.Friend_Card--Name_And_Time {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
}

.Friend_Card--Name {
  font-size: var(--Friends_Chat_Name);
  margin-bottom: 0.3em;
}

.Friend_Card--Time {
  font-size: var(--Friends_Last_Message_Time);
}

.Friend_Card--Time--Unread {
  color: rgb(51, 214, 91);
}

.Friend_Card--Message_Container {
  width: 100%;
  display: flex;
}

.Friend_Card--Message {
  font-size: var(--Friends_Last_Message);
  width: 92%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.Friend_Card--Unread_Message_Count {
  color: rgb(51, 214, 91);
  text-align: end;
  width: 8%;
}

.Friends_List--Empty {
  background-color: rgb(0, 0, 0, 0.4);
  width: 100%;
  padding: 1em;
  border-radius: 10px;
  margin-top: 1em;
}

.Friends_List--Empty--Message {
  font-family: var(--Friends_Sub_Font);
  line-height: 1.5;
  letter-spacing: 1.3px;
  word-spacing: 5px;
}

.Friends_Chat {
  background-color: rgb(20, 33, 61);
  font-family: var(--Friends_Sub_Font);
  display: flex;
  height: 100%;
  width: 75%;
  justify-content: center;
  align-items: center;
  padding: 0em 1em;
  border-radius: 5px;
}

.Friends_Welcome_Card {
  background-color: rgb(0, 0, 0, 0.4);
  max-width: 600px;
  padding: 2em;
  border-radius: 10px;
}

.Friends_Welcome_Card--Title {
  font-size: var(--Friends_Welcome_Title);
  font-weight: 600;
  letter-spacing: 1.3px;
  margin-bottom: 0.7em;
}

.Friends_Welcome_Card--Greeting {
  font-size: var(--Friends_Welcome_Greeting);
  letter-spacing: 1.3px;
  word-spacing: 5px;
  line-height: 1.5;
}

@media (max-width: 900px) {
  :root {
    --Friends_User_Icon_Size: 25px;
    --Friends_Chat_Name: 16px;
    --Friends_Last_Message: 14px;
    --Friends_Last_Message_Time: 12px;
    --Friends_Welcome_Title: 22px;
    --Friends_Welcome_Greeting: 14px;
  }

  .Friends_List_Container {
    height: 100%;
    width: 20%;
    min-width: 300px;
  }

  .Friends_List--Friend_Card {
    height: 60px;
  }

  .Friend_Card--Image_Icon_Container {
    height: 40px;
    width: 40px;
  }

  .Friends_Chat {
    width: 80%;
    padding: 0.5em;
  }

  .Friends_Welcome_Card {
    padding: 1em;
  }

  .Friends_Welcome_Card--Title {
    margin-bottom: 1em;
    line-height: 1.5;
  }

  .Friends_Welcome_Card--Greeting {
    line-height: 2;
  }
}

@media (max-width: 600px) {
  :root {
    --Friends_User_Icon_Size: 30px;
    --Friends_Chat_Name: 18px;
    --Friends_Last_Message: 16px;
    --Friends_Last_Message_Time: 14px;
  }

  .Friends_List_Container {
    height: 100%;
    width: 100%;
    min-width: 300px;
  }

  .Friends_List--Friend_Card {
    height: 70px;
  }

  .Friend_Card--Image_Icon_Container {
    height: 45px;
    width: 45px;
  }

  .Friends_Chat {
    display: none;
    width: 0%;
  }
}

@media (max-width: 450px) {
  :root {
    --Friends_User_Icon_Size: 25px;
    --Friends_Chat_Name: 16px;
    --Friends_Last_Message: 14px;
    --Friends_Last_Message_Time: 12px;
  }

  .Friends_List--Friend_Card {
    height: 60px;
  }

  .Friend_Card--Image_Icon_Container {
    height: 40px;
    width: 40px;
  }
}

